--- a/youth-center-app/config/services.yaml
+++ b/youth-center-app/config/services.yaml
@@ -6,7 +6,9 @@
 parameters:
 
 services:
-    # default configuration for services in *this* file
+    App\Security\LoginSuccessHandler:
+        arguments:
+            $router: '@router'
     _defaults:
         autowire: true      # Automatically injects dependencies in your services.
         autoconfigure: true # Automatically registers your services as commands, event subscribers, etc.
@@ -15,6 +17,9 @@ services:
     # this creates a service per class whose id is the fully-qualified class name
     App\:
         resource: '../src/'
+        exclude: '../src/{DependencyInjection,Entity,Tests,Kernel.php}'
+
+    Symfony\Component\Security\Http\Authentication\AuthenticationSuccessHandlerInterface: '@App\Security\LoginSuccessHandler'
 
     # add more service definitions when explicit configuration is needed
     # please note that last definitions always *replace* previous ones
